# Debugger

./: .gitignore  CMakeLists.txt  Debugger.cpp  Debugger.hpp  Debugger.ixx  main.cpp
Abstractions/Debug Event Handlers/: AbstractCreateProcessDebugEventHandler.hpp  AbstractCreateThreadDebugEventHandler.hpp  AbstractDebugEventHandlers.hpp  AbstractExceptionDebugEventHandler.hpp  AbstractExitProcessDebugEventHandler.hpp  AbstractExitThreadDebugEventHandler.hpp  AbstractLoadDllDebugEventHandler.hpp  AbstractUnloadDllDebugEventHandler.hpp
Abstractions/Debug Events/: AbstractDebugEvent.hpp
Abstractions/Event Managing/: AbstractEvent.hpp  AbstractEvent.ixx  AbstractEventManager.hpp  AbstractEventManager.ixx  AbstractEventRecipient.hpp  AbstractEventRecipient.ixx
Abstractions/Message Handling/: AbstractMessageHandler.hpp  AbstractMessageHandler.ixx
DbgCtl/: dbgctl.py  debug_exception_handler.py  logger_message_handler.py
Debug Event Hadlers/Default/: DefaultCreateProcessDebugEventHandler.cpp  DefaultCreateProcessDebugEventHandler.hpp  DefaultCreateThreadDebugEventHandler.cpp  DefaultCreateThreadDebugEventHandler.hpp  DefaultExceptionDebugEventHandler.hpp  DefaultLoadDllDebugEventHandler.cpp  DefaultLoadDllDebugEventHandler.hpp  DefaultLoadDllDebugEventHandler.ixx
Debug Event Handlers/: DebugEventHandlerType.hpp  TraceDebugEventHandler.cpp  TraceDebugEventHandler.hpp  TraceResolver.cpp  TraceResolver.hpp
Debug Event Handlers/Default/: DefaultBreakpointOnStartHandler.cpp  DefaultBreakpointOnStartHandler.hpp  DefaultBreakpointResolver.cpp  DefaultBreakpointResolver.hpp  DefaultCreateProcessDebugEventHandler.cpp  DefaultCreateProcessDebugEventHandler.hpp  DefaultCreateProcessDebugEventHandler.ixx  DefaultCreateThreadDebugEventHandler.cpp  DefaultCreateThreadDebugEventHandler.hpp  DefaultCreateThreadDebugEventHandler.ixx  DefaultExceptionDebugEventHandler.cpp  DefaultExceptionDebugEventHandler.hpp  DefaultExceptionDebugEventHandler.ixx  DefaultExitProcessDebugEventHandler.cpp  DefaultExitProcessDebugEventHandler.hpp  DefaultExitThreadDebugEventHandler.cpp  DefaultExitThreadDebugEventHandler.hpp  DefaultHandlers.hpp  DefaultLoadDllDebugEventHandler.cpp  DefaultLoadDllDebugEventHandler.hpp  DefaultUnloadDllDebugEventHandler.cpp  DefaultUnloadDllDebugEventHandler.hpp  DefaultUnloadDllDebugEventHandler.ixx
Debug Event Handlers/Dump Function Resolver/: ArgInfo.cpp  ArgInfo.hpp  BitfieldsDatabase.hpp  DumpFunction.cpp  DumpFunction.hpp  FunctionsDatabase.hpp  StructuresDatabase.hpp
Debug Event Handlers/Trace Functions Resolver/: TraceFunctionsResolver.cpp  TraceFunctionsResolver.hpp
Debug Events/: CreateProcessDebugEvent.hpp  CreateThreadDebugEvent.hpp  DebugEvent.cpp  DebugEvent.hpp  DebugEvent.ixx  DebugEventType.hpp  DebugEventType.ixx  DebugEvents.hpp  ExceptionDebugEvent.hpp  ExitProcessDebugEvent.hpp  ExitThreadDebugEvent.hpp  LoadDllDebugEvent.hpp  UnloadDllDebugEvent.hpp
Debugger/: Breakpoint.cpp  Breakpoint.hpp  Debugger.hpp  ExceptionContext.hpp  Function.cpp  Function.hpp
Logger/: Logger.cpp  Logger.hpp  Logger.ixx
Logger/Message Handlers/: ConsoleMessageHandler.hpp  ConsoleMessageHandler.ixx  FileMessageHandler.hpp  MessageHandlers.hpp
Process Memory Manipulation/: ProcessMemoryManipulation.cpp  ProcessMemoryManipulation.hpp  ProcessMemoryManipulation.ixx
Process Memory Manipultion/: ProcessMemoryManipulation.cpp  ProcessMemoryManipulation.hpp
Utils/: Utils.cpp  Utils.hpp  Utils.ixx
